--- a/index.html
+++ b/index.html
@@ -3917,8 +3917,8 @@
 												<h3>$250.00</h3>
 												<p>Your Cart contains 3 items</p>
 											</div>
-											<a href="index.php" class="btn btn-secondary w-100 mb-2 hover-btn-red">Continue Shopping</a>
-											<a href="cart/shopping-cart.php" class="btn btn-secondary w-100 mb-2 hover-btn-red">View Cart</a>
+											<a href="index.html" class="btn btn-secondary w-100 mb-2 hover-btn-red">Continue Shopping</a>
+											<a href="cart/index.html" class="btn btn-secondary w-100 mb-2 hover-btn-red">View Cart</a>
 										</div>
 									</div>
 								</div>
